--- a/public/style.css
+++ b/public/style.css
@@ -16,10 +16,11 @@ body {
 	background-size: cover;
 }
 
-/* home page css */
+/* home page css - LEFT */
 .home-left {
 	width: 900px;
 	position: relative;
+	display: inline-block;
 }
 
 .home-left img {
@@ -36,6 +37,7 @@ body {
 	top: 255px;
 	left: 105px;
 	color: white;
+	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
 	letter-spacing: 10px
 }
 
@@ -49,4 +51,19 @@ body {
 	left: 105px;
 	color: white;
 	letter-spacing: 1px;
+}
+
+/* home page css - RIGHT (login/reg) */
+.home-right {
+	width: 300px;
+	display: inline-block;
+	text-align: center;
+	position: relative;
+}
+
+.home-right h3 {
+	font-family: 'Hero Light', sans serif;
+	font-size: 18px;
+	display: inline-block;
+	position: absolute;
 }
