--- a/public/style.css
+++ b/public/style.css
@@ -16,29 +16,37 @@ body {
 	background-size: cover;
 }
 
+#home-wrapper{
+	height: 90vh;
+	display: flex;
+	align-items: center;
+}
+
 /* home page css - LEFT */
 .home-left {
-	width: 900px;
+	width: 66%;
 	position: relative;
 	display: inline-block;
+	border: solid 1px red;
 }
 
 .home-left img {
 	width: 850px;
-	position: absolute;
+/*	position: absolute;
 	top: 150px;
-	left: 50px
+	left: 50px*/
 }
 
 .home-left h1 {
+	margin: 0;
 	font-size: 90px;
 	display: inline-block;
-	position: absolute;
-	top: 255px;
-	left: 105px;
 	color: white;
 	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
-	letter-spacing: 10px
+	letter-spacing: 10px;
+	position: absolute;
+	top: 45%;
+	left: 50px;
 }
 
 .home-left h2 {
@@ -47,23 +55,26 @@ body {
 	text-transform: uppercase;
 	display: inline-block;
 	position: absolute;
-	top: 411px;
-	left: 105px;
+	top: 70%;
+	left: 50px;
 	color: white;
 	letter-spacing: 1px;
 }
 
 /* home page css - RIGHT (login/reg) */
 .home-right {
-	width: 300px;
+	width: 33%;
 	display: inline-block;
 	text-align: center;
 	position: relative;
+	border: solid 1px blue;
 }
 
 .home-right h3 {
 	font-family: 'Hero Light', sans serif;
 	font-size: 18px;
 	display: inline-block;
-	position: absolute;
+/*	position: absolute;
+	top: 200px;
+	left: 240px;*/
 }
