--- a/public/style.css
+++ b/public/style.css
@@ -26,10 +26,9 @@ body {
 /* home page css - LEFT */
 .home-left {
 	width: 66%;
-	position: relative;
-	/*display: inline-block;*/
+	position: relative;	/*display: inline-block;*/
 	display: flex;
-  justify-content: flex-end;
+	justify-content: flex-end;
 }
 
 .home-left img {
@@ -65,18 +64,17 @@ body {
 .home-right {
 	width: 33%;
 	display: inline-block;
-	text-align: center;
-	/*position: relative;*/
+	text-align: center;	/*position: relative;*/
 }
 
 .home-right h3 {
-    font-family: 'Hero Light', sans serif;
-    font-size: 18px;
-    letter-spacing: 2px;
-    margin: 5px;
-    display: inline-block;
-    border-bottom: 1px solid white;
-    padding: 5px;
+	font-family: 'Hero Light', sans serif;
+	font-size: 18px;
+	letter-spacing: 2px;
+	margin: 5px;
+	display: inline-block;
+	border-bottom: 1px solid white;
+	padding: 5px;
 }
 
 /* forms */
@@ -129,17 +127,42 @@ button[type=submit] {
 	background-color: white;
 	border: none;
 	border-radius: 20px;
-	 -webkit-transform: perspective(1px) translateZ(0);
-  transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  overflow: hidden;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-property: color, background-color;
-  transition-property: color, background-color;
+	-webkit-transform: perspective(1px) translateZ(0);
+	transform: perspective(1px) translateZ(0);
+	box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+	overflow: hidden;
+	-webkit-transition-duration: 0.3s;
+	transition-duration: 0.3s;
+	-webkit-transition-property: color, background-color;
+	transition-property: color, background-color;
 }
 
 button[type=submit]:hover, button[type=submit]:focus, button[type=submit]:active {
-  background-color: #F57A8F;
-  color: white;
+	background-color: #F57A8F;
+	color: white;
+}
+
+/* registration page css */
+.reg-header {
+	text-align: center;
+}
+
+.reg-header h1 {
+	margin-top: 55px;
+	margin-bottom: 0;
+	font-size: 90px;
+	display: block;
+	color: white;
+	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
+	letter-spacing: 10px;
+}
+
+.reg-header h2 {
+	font-family: 'Hero Light', sans serif;
+	font-size: 22px;
+	color: white;
+	letter-spacing: 10px;
+	text-transform: uppercase;
+	margin: 10px;
+	display: block;
 }
