reg form is being a lil b

--- a/public/style.css
+++ b/public/style.css
@@ -166,3 +166,21 @@ button[type=submit]:hover, button[type=submit]:focus, button[type=submit]:active
 	margin: 10px;
 	display: block;
 }
+
+form#register-form {
+	border: 1px solid black;
+  width: 60%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.reg-form input[type="text"].reg-name {
+    font-family: 'Hero Light', sans serif;
+    font-size: 13px;
+    display: inline-block;
+    padding: 10px;
+    border: none;
+    margin: 10px 10px;
+    width: 30%;
+    /* transition: ease-in-out, width .35s ease-in-out; */
+}
