--- a/public/style.css
+++ b/public/style.css
@@ -1,14 +1,13 @@
-/* overall css */
+/* OVERALL CSS */
 @font-face {
 	font-family: 'Iris';
 	src: url('fonts/iris-font-regular.woff');
 }
 
 @font-face {
-    font-family: 'Hero';
-    src: url('fonts/Hero.woff');
+	font-family: 'Hero';
+	src: url('fonts/Hero.woff');
 }
-
 
 @font-face {
 	font-family: 'Hero Light';
@@ -23,7 +22,11 @@ body {
 	background-repeat: no-repeat;
 }
 
-/* home page css */
+body#nav-bodeh {
+	margin: 0;
+}
+
+/* HOME PAGE CSS */
 #home-wrapper {
 	height: 90vh;
 	display: flex;
@@ -43,10 +46,10 @@ body {
 }
 
 .home-left h1 {
-	margin: 0;
-	font-size: 90px;
-	display: inline-block;
 	color: white;
+	font-size: 90px;
+	margin: 0;
+	display: inline-block;
 	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
 	letter-spacing: 10px;
 	position: absolute;
@@ -67,7 +70,7 @@ body {
 	margin-top: 30px;
 }
 
-/* home page css - RIGHT (login/reg) */
+/* home page css - RIGHT */
 .home-right {
 	width: 33%;
 	display: inline-block;
@@ -84,25 +87,29 @@ body {
 	padding: 5px;
 }
 
-/* nav bar */
+/* NAV BAR */
+.nav-header {
+	font-family: 'Hero', sans serif;
+	font-size: 15px;
+	text-align: center;
+}
+
 ul {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
 	overflow: hidden;
-	background-color: rgba(255,255,255,0.7);
+	background-color: rgba(255, 255, 255, 0.7);
 }
 
 li {
 	display: inline-block;
 	color: black;
-	font-size: 18px;
-	margin: 0px 5px;
+	margin: 0px 15px;
 }
 
 li a {
 	display: block;
-	font-size: 18px;
 	color: black;
 	text-align: center;
 	padding: 20px 16px;
@@ -114,7 +121,7 @@ li a:hover {
 	background-color: pink;
 }
 
-/* forms */
+/* FORMS */
 #login-form {
 	text-align: center;
 	margin: 0 auto;
@@ -179,7 +186,7 @@ button[type=submit]:hover, button[type=submit]:focus, button[type=submit]:active
 	color: white;
 }
 
-/* registration page css */
+/* REGISTRATION PAGE */
 .reg-header {
 	text-align: center;
 	margin-bottom: 50px;
@@ -206,9 +213,9 @@ button[type=submit]:hover, button[type=submit]:focus, button[type=submit]:active
 }
 
 form#register-form {
-  width: 60%;
-  margin: 0 auto;
-  text-align: center;
+	width: 60%;
+	margin: 0 auto;
+	text-align: center;
 }
 
 .reg-form input[type="text"] {
@@ -222,7 +229,21 @@ form#register-form {
 }
 
 .reg-form input[type="text"].reg-name {
-    display: inline-block;
-    margin: 30px 10px 10px 10px;
-    width: 30%;
+	display: inline-block;
+	margin: 30px 10px 10px 10px;
+	width: 30%;
+}
+
+/* USER PAGE */
+.user-wrapper {
+	text-align: center;
+}
+
+.user-greeting {
+	color: white;
+	font-size: 80px;
+	margin: 50px;
+	display: block;
+	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
+	letter-spacing: 10px;
 }
