--- a/public/style.css
+++ b/public/style.css
@@ -293,6 +293,17 @@ form#register-form {
 	margin: 0 30px;
 }
 
-input[type="radio" i]:focus {
-	background-color: pink;
+[type=radio] {
+  position: absolute;
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+[type=radio] + img {
+  cursor: pointer;
+}
+
+[type=radio]:checked+img {
+  outline: 2px solid #f00;
 }
