--- a/public/style.css
+++ b/public/style.css
@@ -264,7 +264,7 @@ form#register-form {
     font-size: 18px;
     color: white;
     letter-spacing: 1px;
-    margin-bottom: 70px;
+    margin-bottom: 40px;
     /* border-bottom: 1px dashed white; */
     /* padding-bottom: 5px; */
     display: inline-block;
@@ -280,7 +280,7 @@ form#register-form {
 
 
 #entry-form textarea {
-	font-family: 'Hero Light', sans serif;
+	font-family: 'Hero', sans serif;
 	font-size: 15px;
 	letter-spacing: 1.5px;
 	line-height: 2;
