managed to get all entries by user onto mood report page as result.rows, but now idk what to do

--- a/public/style.css
+++ b/public/style.css
@@ -74,7 +74,7 @@ body#nav-bodeh {
 .home-right {
 	width: 33%;
 	display: inline-block;
-	text-align: center;	/*position: relative;*/
+	text-align: center;
 }
 
 .home-right h3 {
