--- a/public/style.css
+++ b/public/style.css
@@ -14,6 +14,10 @@
 	src: url('fonts/Hero-Light.woff');
 }
 
+html{
+	height: 100%;
+}
+
 body {
 	font-family: 'Iris', sans serif;
 	background-image: url("img/background.jpeg");
@@ -24,6 +28,14 @@ body {
 
 body#nav-bodeh {
 	margin: 0;
+}
+
+body#scroll-bodeh {
+	margin: 0;
+	background: linear-gradient(90deg, rgba(251,122,207,1) 0%, rgba(247,152,172,1) 45%, rgba(250,209,143,1) 100%);
+	height: 100%;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 /* HOME PAGE CSS */
