--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,10 @@ body#scroll-bodeh {
 	background-attachment: fixed;
 }
 
+body img:hover {
+ 	outline: none;
+ }
+
 /* HOME PAGE */
 
 #home-wrapper {
@@ -323,6 +327,24 @@ div#login-container {
 }
 
 /* USER PAGE */
+ #overlay {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  visibility: hidden;
+  /*apparently visibility hidden is taken as the element still being on the page but if it doesnt affect then i guess its ok..? */
+  /*visibility: hidden;*/
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  /*background-color: rgba(255,255,255,0.85);*/
+  background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);
+  cursor: pointer;
+}
 
 .user-wrapper {
 	text-align: center;
@@ -348,16 +370,16 @@ div#login-container {
 
 .user-wrapper h3 {
 	font-family: 'Iris', sans serif;
-	font-size: 13px;
+	font-size: 18px;
 	color: white;
 	letter-spacing: 1px;
 	display: block;
 	margin: 0;
 }
 
-#entry-form textarea {
+.user-wrapper textarea {
 	font-family: 'Hero', sans serif;
-	font-size: 15px;
+	font-size: 18px;
 	letter-spacing: 1.5px;
 	line-height: 2;
 	background: transparent;
@@ -365,14 +387,22 @@ div#login-container {
 	display: block;
 	padding: 10px;
 	border: none;
-	margin: 10px auto;
+	margin: 100px auto;
 	width: 65%;
 	resize: none;
 	text-align: center;
 }
 
-#entry-form textarea:focus {
+.user-wrapper textarea:focus {
 	outline: 0;
+}
+
+div#mood-selection {
+  margin: 60px 0 20px 0;
+}
+
+div#reason-selection {
+  margin: 10px 0 50px 0;
 }
 
 #mood-selection label, #reason-selection label {
@@ -381,7 +411,7 @@ div#login-container {
 }
 
 #mood-selection img, #reason-selection img {
-	height: 20px;
+	height: 30px;
 }
 
 .radio-wrapper {
