--- a/public/style.css
+++ b/public/style.css
@@ -113,6 +113,7 @@ body img:hover {
 	font-family: 'Hero', sans serif;
 	font-size: 15px;
 	text-align: center;
+	margin-bottom: 50px;
 }
 
 ul {
@@ -327,22 +328,24 @@ div#login-container {
 }
 
 /* USER PAGE */
+
  #overlay {
   position: fixed;
   display: flex;
   align-items: center;
   justify-content: center;
   visibility: hidden;
-  /*apparently visibility hidden is taken as the element still being on the page but if it doesnt affect then i guess its ok..? */
-  /*visibility: hidden;*/
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  /*background-color: rgba(255,255,255,0.85);*/
-  background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);
+	background-image: url("img/background.jpeg");
+	background-size: cover;
+	height: 100vh;
+	background-repeat: no-repeat;
+	/*background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);*/
   cursor: pointer;
 }
 
@@ -353,7 +356,7 @@ div#login-container {
 .user-wrapper h1 {
 	color: white;
 	font-size: 80px;
-	margin: 50px 0 5px 0;
+	margin: 10px 0 5px 0;
 	display: block;
 	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
 	letter-spacing: 10px;
@@ -606,7 +609,7 @@ div#fave-container {
 	font-family: 'Hero', sans serif;
   color: white;
   font-size: 50px;
-  margin: 300px 0;
+  margin: 200px 0;
   display: inline-block;
 	background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);
 }
