committing before uploading to heroku

--- a/public/style.css
+++ b/public/style.css
@@ -143,6 +143,13 @@ li a:hover {
 	background-color: pink;
 }
 
+div#logo img {
+  height: 50px;
+  width: 125px;
+  position: absolute;
+  left: 10px;
+  z-index: 5;
+}
 /* LOGIN FORM */
 
 #login-form, #login-form-2 {
@@ -345,7 +352,6 @@ div#login-container {
 	background-size: cover;
 	height: 100vh;
 	background-repeat: no-repeat;
-	/*background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);*/
   cursor: pointer;
 }
 
@@ -618,20 +624,22 @@ div#fave-container {
 #fave-container h1 {
 	font-family: 'Hero', sans serif;
   color: white;
-  font-size: 50px;
+  font-size: 40px;
+  border-radius: 20px;
   margin: 200px 0;
   display: inline-block;
 	background: linear-gradient(90deg, rgba(251, 122, 207, 1) 0%, rgba(247, 152, 172, 1) 45%, rgba(250, 209, 143, 1) 100%);
 }
 
 .podcast-card {
-  margin: 80px 0;
+  margin: 30px 0;
 }
 
 .podcast-card h2 {
   font-family: 'Hero Light', sans serif;
-  font-size: 20px;
+  font-size: 18px;
   display: inline-block;
+  margin-bottom: 0;
 }
 
 .podcast-card input[type="image"] {
