--- a/public/style.css
+++ b/public/style.css
@@ -46,54 +46,41 @@ body img:hover {
 /* HOME PAGE */
 
 #home-wrapper {
-	height: 90vh;
 	display: flex;
-	align-items: center;
+	flex-wrap: wrap;
 }
 
-/* HOME PAGE - LEFT */
-
 .home-left {
-	width: 66%;
-	position: relative;
 	display: flex;
-	justify-content: flex-end;
+	flex-wrap: wrap;
+	justify-content: center;
+	margin-bottom: 50px;
 }
 
 .home-left img {
-	width: 850px;
+	display: none;
 }
 
 .home-left h1 {
 	color: white;
-	font-size: 90px;
-	margin: 0;
+	font-size: 4rem;
+	margin: 60px 0 0 0;
 	display: inline-block;
 	text-shadow: -3px 2px 2px rgba(189, 195, 199, 1);
 	letter-spacing: 10px;
-	position: absolute;
-	top: 45%;
-	left: 135px;
 }
 
 .home-left h2 {
 	font-family: 'Hero Light', sans serif;
-	font-size: 22px;
+	font-size: 1.2rem;
+	text-align: center;
 	color: white;
 	letter-spacing: 1px;
 	text-transform: uppercase;
-	display: inline-block;
-	position: absolute;
-	top: 70%;
-	left:140px;
-	margin-top: 30px;
 }
 
-/* HOME PAGE - RIGHT */
-
 .home-right {
-	width: 33%;
-	display: inline-block;
+	width: 100vw;
 	text-align: center;
 }
 
@@ -105,6 +92,58 @@ body img:hover {
 	display: inline-block;
 	border-bottom: 1px solid white;
 	padding: 5px;
+}
+
+/* HOME PAGE - MEDIA QUERIES */
+@media (min-width:992px) {
+	#home-wrapper {
+		height: 90vh;
+		display: flex;
+		align-items: center;
+	}
+
+	.home-left {
+		width: 66%;
+		position: relative;
+		justify-content: flex-end;
+	}
+	
+	.home-left img {
+		display: inline-block;
+		width: 850px;
+	}
+	
+	.home-left h1 {
+		font-size: 90px;
+		position: absolute;
+		top: 45%;
+		left: 135px;
+		margin: 5px;
+	}
+	
+	.home-left h2 {
+		font-size: 22px;
+		position: absolute;
+		top: 70%;
+		left:140px;
+		margin-top: 30px;
+	}
+
+	.home-right {
+		width: 33%;
+		display: inline-block;
+		text-align: center;
+	}
+	
+	/* .home-right h3 {
+		font-family: 'Hero Light', sans serif;
+		font-size: 18px;
+		letter-spacing: 2px;
+		margin: 5px;
+		display: inline-block;
+		border-bottom: 1px solid white;
+		padding: 5px;
+	} */
 }
 
 /* NAV BAR */
